Got rid of C#. Let's write SLXI in Common Lisp.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
 *~
-*.tmp
-*.diff
-*.patch
 *.swp
-*.exe
-*.manifest.exe
-*.dll
-*.o
-*.obj
-*.res
-*.baml
-*.pdb
-*.suo
-*.user
-Bin
-SLXI/obj
+*.fasl
+*.fasl
+*.fsl
+*.wx32fsl
+*.wx64fsl
